test/libsolidity/syntaxTests/inlineAssembly/storage_reference_on_function.sol
contract C {
    function f() pure public {
        assembly {
            let x := f_slot
        }
    }
}
// ----
// DeclarationError: (84-90): Identifier not found.
